[package]
name = "cipher"
version = "0.1.0"
edition = "2021"

[dependencies]
epub = "1.2.0"
html2md = "0.2.15"
clap = { version = "4.4.8", features = ["derive"] }
anyhow = "1.0.75"
# For Markdown parsing and chunking
pulldown-cmark = "0.9.3"

# For text embeddings (now using Ollama)
ollama-rs = "0.1.7"

# For embedded vector store
lancedb = "0.4.2"
arrow-array = "50.0.0" # lancedb often needs explicit arrow versions
arrow-schema = "50.0.0" # lancedb often needs explicit arrow versions


# Need tokio for async operations
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"

[dev-dependencies]
tempfile = "3.10.1" # For integration tests
