[package]
name = "epub_to_markdown_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epub = "1.2.0"
html2md = "0.2.15"
pulldown-cmark = "0.9.3" # For basic Markdown processing, if needed for direct output
clap = { version = "4.4.8", features = ["derive"] }
anyhow = "1.0.75"
